--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<h1> New site! </h1>
+<h1> About me </h1>
+
+My name is Will and I live in England. My most recently completed education is a BSC in Mathematics with the Open University. 
+
+I currently work in retail, though my real passion lies with programming. Some of my most recent projects include:
+
+ <ul>
+  <li>Mylang - A language that looks like Python but runs like Rust</li>
+  <li>Byte Size - A text compression tool that works better than smaz for common words</li>
+  <li>Project Oak - A tool to help developers make installation packages that combines ease and flexibility of imperative systems with the rigor of declaritive solutions</li>
+   <li> <a href="https://ray33ee.github.io/5b/">5b</a> - A tool for converting everything into everything else  </li>
+</ul> 
+
+My goals are to obtain employment as a Data Analyst, then eventually as a Data Scientist.
+
+Professional AND personal interests include all things Mathematics, Statistics, AI and somputer Science. Personal interests include Strategy games, cooking, programming and baking.
+
+<h2>  </h2>
